--- a/rws_javaClassicDemo/pom.xml
+++ b/rws_javaClassicDemo/pom.xml
@@ -4,7 +4,7 @@
   <groupId>nl.rws.javademo</groupId>
   <artifactId>rws_javaClassicDemo</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>Demo Project</name>
   <url>http://maven.apache.org</url>
   <properties>
